--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <meta property="og:title" content="Jornadas Científicas" />
     <meta
       property="og:Hospital Santojanni"
-      content="XXXIX Jornadas Científicas del Hospital Santojanni"
+      content="Jornadas Científicas del Hospital Santojanni 2025 | Ciencia que forma, transforma y cuida: 40 años de salud pública"
     />
     <meta
       property="og:image"
